istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: store
spec:
  host: store
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: product
spec:
  host: product
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: store
spec:
  hosts:
  - store
  http:
  - route:
    - destination:
        host: store
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product
spec:
  hosts:
  - product
  http:
  - route:
    - destination:
        host: product
        subset: v1
      weight: 50
    - destination:
        host: product
        subset: v2
      weight: 50
---
apiVersion: v1
kind: Service
metadata:
  name: product
  labels:
    app: product
    service: product
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: product
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v1
  labels:
    app: product
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      version: v1
  template:
    metadata:
      labels:
        app: product
        version: v1
    spec:
      serviceAccountName: bookinfo-product
      containers:
      - name: product
        image: istio-product:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-v2
  labels:
    app: product
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
      version: v2
  template:
    metadata:
      labels:
        app: product
        version: v2
    spec:
      serviceAccountName: bookinfo-product
      containers:
      - name: product
        image: istio-product:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store
  labels:
    app: store
    service: store
spec:
  ports:
    - port: 8080
      name: http
  selector:
    app: store
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v1
  labels:
    app: store
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store
      version: v1
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      serviceAccountName: bookinfo-store
      containers:
      - name: store
        image: istio-store:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
